# agente-sei-inteligente

./: .env.example  .gitignore  Iniciar_Agente_19.bat  README.md  create_ico.py  pyproject.toml  requirements.txt
.shadow_logs/: shadow_trials.jsonl
agente_sei_inteligente.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: main.py
browser_extension/: background.js  content.css  content.js  manifest.json  preview_chat.html
docs/: 00-visao-geral.md  01-arquitetura.md  02-regras-de-seguranca.md  03-manual-operacional.md  04-google-agenda.md  05-alertas-celular.md  06-integracao-sei.md  07-modelos-de-minutas.md  08-roadmap.md  09-interface-web.md  10-agentes-ia.md  11-modelo-de-dados.md  12-backlog-e-criterios.md  13-perguntas-pendentes.md  14-api-e-tarefas.md  15-governanca-e-riscos.md  16-plano-de-testes.md  17-leitura-manuais-sei.md  18-orientacao-gemini-rag.md  19-pesquisa-agentes-sei-ia.md  20-politica-identidade-sessao-sei.md  21-estrategia-sem-modulo-oficial-sei.md  22-robozinho-sei-assistente.md  23-skills-especialistas.md  24-contratos-das-skills.md  25-politica-dados-sei.md  26-matriz-conformidade.md  27-checklist-processos-desenvolvimento.md  28-regras-git-ia.md  29-regra-documentacao-continua.md  30-registro-decisoes.md  31-registro-processos.md  32-registro-testes-homologacao.md  33-changelog.md  34-prompt-claude-code.md  35-handoff-retomada.md  36-relatorio-status-projeto.md  37-fase-desktop-navegador-seguro.md  38-agente-sei-rpa-assistido.md  38-estrategia-zero-custo-sei.md  (+38 more)
scripts/: analyze_pdf.py  check_no_secrets.py  fix_mojibake.py  init_db.py  (+11 more)
(+168 files in other folders)
