[project]
name = "agente-sei-inteligente"
version = "0.1.0"
description = "Agente 19 - Funcionário Digital de IA do 19º CRPM"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.23.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0"
]

[tool.setuptools]
packages = ["app"]
