[project]
name = "agente-sei-inteligente"
version = "0.1.0"
description = "Agente administrativo assistivo do 19 CRPM (apoio ao SEI, sem atos oficiais)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.23.0",
    "langgraph>=0.0.30",
    "langchain-core>=0.1.0",
    "langchain-google-genai>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0"
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
